docs/versioned_docs/version-7.2/raw-queries.md
---
title: Using raw SQL query fragments
---

## `raw()` helper

When you want to use a raw SQL fragment as part of your query, you can use the `raw()` helper. It creates a raw SQL query fragment instance that can be assigned to a property or part of a filter. This fragment is represented by `RawQueryFragment` class instance that can be serialized to a string, so it can be used both as an object value and key. When serialized, the fragment key gets cached and only such a cached key will be recognized by the ORM. This adds runtime safety to the raw query fragments.

> **`raw()` helper is required since v6 to use a raw SQL fragment in your query, both through EntityManager and QueryBuilder.**

```ts
// as a value
await em.find(User, { time: raw('now()') });

// as a key
await em.find(User, { [raw('lower(name)')]: name.toLowerCase() });

// with operators
await em.find(User, { [raw('lower(name)')]: { $like: name.toLowerCase() } });

// value can be empty array to skip operator
await em.find(User, { [raw('(select 1 = 1)')]: [] });
```

The `raw` helper supports several signatures, you can pass in a callback that receives the current property alias:

```ts
await em.find(User, { [raw(alias => `lower(${alias}.name)`)]: name.toLowerCase() });
```

### Named parameters

Besides positional `?` placeholders bound from an array, the `raw` helper supports named parameters bound from an object. Use `:name` for values and `:name:` for identifiers (quoted according to the database in use). Parameters can repeat, and PostgreSQL `::` casts are left untouched:

```ts
const fragment = raw('select :col: from geo_seed where city = :city or region = :city', { col: 'city', city: 'Brno' });
```

This also works with `em.execute()` and `connection.execute()`, where you can pass the object directly as the `params` argument:

```ts
await em.execute(`
  insert into geo_seed (country, region, city)
  values (:country, :region, :city)
  on conflict (city)
      do update set country = excluded.country,
                    region  = excluded.region
`, { country, region, city });
```

### Array parameters

Array values (both positional and named) are expanded into a comma-separated list of escaped values, so they fit directly into an `in (...)` clause. On PostgreSQL, wrap the placeholder in an `array[...]` constructor to use it with `= any(...)`, and add a cast when the array can be empty, since PostgreSQL cannot infer the type of an empty `array[]`:

```ts
const refs = ['city:399373', 'city:395709'];

// ... where ref in ('city:399373', 'city:395709')
await em.execute('select * from cities where ref in (:refs)', { refs });

// ... where ref = any(array['city:399373', 'city:395709']::text[])
await em.execute('select * from cities where ref = any(array[:refs]::text[])', { refs });
```

### Raw fragments in filters

When using raw query fragment inside a filter, you might have to use a callback signature to create new raw instance for every filter usage - namely when you use the fragment as an object key, which requires its serialization.

```ts
@Filter({ name: 'long', cond: () => ({ [raw('length(perex)')]: { $gt: 10000 } }) })
```

### Raw fragments in indexes and uniques

The `raw` helper can be used within indexes and uniques to write database-agnostic SQL expressions. In that case, you can use `'??'` to tag your database identifiers (table name, column names, index name, ...) inside your expression, and pass those identifiers as a second parameter to the `raw` helper. Internally, those will automatically be quoted according to the database in use:

```ts
// On postgres, will produce: create index "index custom_idx_on_name" on "library.author" ("country")
// On mysql, will produce: create index `index custom_idx_on_name` on `library.author` (`country`)
@Index({ name: 'custom_idx_on_name', expression: (columns, table, indexName) => raw(`create index ?? on ?? (??)`, [indexName, table, columns.name]) })
@Entity({ schema: 'library' })
export class Author { ... }
```

You can also use the `quote` tag function to write database-agnostic SQL expressions. The end-result is the same as using the `raw` function regarding database identifiers quoting, only to have a more elegant expression syntax:

```ts
@Index({ name: 'custom_idx_on_name', expression: (columns, table, indexName) => quote`create index ${indexName} on ${table} (${columns.name})` })
@Entity({ schema: 'library' })
export class Author { ... }
```

## `raw` queries with `QueryBuilder`

You can use the `raw` helper for `QueryBuilder` or Kysely query builder instances too. Note that this is only available in the `raw` helper exported from SQL drivers, not with the one exported from the `@mikro-orm/core` package.

```ts
import { raw } from '@mikro-orm/postgresql';

const kysely = em.getKysely();
const subQuery = kysely.selectFrom('user').select('id').where('active', '=', true);

const r = await em.find(User, {
  id: raw(subQuery),
});
```

## `sql` tagged templates

You can also use the `sql` tagged template function, which works the same, but supports only the simple string signature:

```ts
// as a value
await em.find(User, { time: sql`now()` });

// as a key
await em.find(User, { [sql`lower(name)`]: name.toLowerCase() });

// value can be empty array
await em.find(User, { [sql`(select ${1} = ${1})`]: [] });
```

### `sql.ref()`

When you want to refer to a column, you can use the `sql.ref()` function:

```ts
await em.find(User, { foo: sql.ref('bar') });
```

### `sql.now()`

When you want to define a default value for a datetime column, you can use the `sql.now()` function. It resolves to `current_timestamp` SQL function, and accepts a `length` parameter.

```ts
@Property({ default: sql.now() })
createdAt: Date & Opt;
```

### `sql.lower()` and `sql.upper()`

To convert a key to lowercase or uppercase, you can use the `sql.lower()` and `sql.upper()` functions

```ts
const books = await orm.em.find(Book, {
  [sql.upper('title')]: 'TITLE',
});
```

### Aliasing

To select a raw fragment, you need to alias it. For that, you can use ```sql`(select 1 + 1)`.as('<alias>')```.

```ts
const qb = em.createQueryBuilder(User, 'u');
qb.select(['*', sql`(select count(*) from books where author_id = u.id)`.as('bookCount')]);
```

When using `.as()` with QueryBuilder, the alias becomes available for use in subsequent `where()` or `orderBy()` calls with proper type inference:

```ts
const qb = em.createQueryBuilder(User, 'u')
  .select(['*', sql`u.first_name || ' ' || u.last_name`.as('fullName')])
  .orderBy({ fullName: 'asc' }); // 'fullName' is recognized as a valid key
```

### Return type

The `raw()` function returns `RawQueryFragment` by default, which provides better type safety. When assigning a raw fragment directly to an entity property, you need to provide an explicit type parameter:

```ts
// Direct property assignment requires explicit type
author.age = raw<number>(`age + 1`);
```

When using `em.create()`, `em.assign()`, or in filter conditions, no explicit type is needed:

```ts
// No explicit type needed with em.create/em.assign
em.assign(author, { age: raw(`age + 1`) });

// No explicit type needed in filters
await em.find(User, { [raw('lower(name)')]: name.toLowerCase() });

// No explicit type needed in QueryBuilder
qb.select(raw('count(*) as count'));
```
